@@ -579,3 +579,5 @@ FIXED: Colored torches were not restored on quickload if you (quit and) restarte
 DONE: Added command-line parameter "mute": Start the game with sound off.
 FIXED: Fixed compiling with some features #undefined. (USE_TEXT, USE_LIGHTING, USE_MENU)
 DONE: Hide references to various features if the game was compiled without them.
+DONE: A scrollbar appears in the pause menu if scrolling is possible.
+	It's not clickable yet, it just shows where you are in the list.
